# danger-swap

./: .gitignore
.github/workflows/: build.yml  dotnet.yml  python-app.yml
Crypto_Scraper/: LICENSE  README.md  crypto_scrapper_installer.bat  pyproject.toml  requirements.txt  setup.cfg
Crypto_Scraper/src/: main.py
Crypto_Scraper/src/filters/: crypto_filter.py
Crypto_Scraper/src/parsers/: json_parser.py
Crypto_Scraper/src/scrapers/: scrape_coingecko.py  scrape_coinlib.py
Crypto_Scraper/src/utils/: database.py  file_writer.py
Crypto_Scraper/tests/: test_coingecko_scraper.py  test_coinlib_scraper.py  test_crypto_filter.py  test_database_util.py  test_json_parser.py
Currency_Scraper/: main.py  pyproject.toml  requirements.txt  setup.cfg
Currency_Scraper/filters/: filter.py
Currency_Scraper/scrapers/: scraper.py
Currency_Scraper/src/: main.py  test_currency_filter.py  test_currency_scraper.py  test_db_connection.py
Currency_Scraper/src/filter/: currency_filter.py
Currency_Scraper/src/filters/: currency_filter.py
Currency_Scraper/src/scrapers/: currency_scraper.py
Currency_Scraper/src/utilities/: db_utilities.py  file_writer.py
Currency_Scraper/tests/: test_currency_filter.py  test_scraper.py
Currency_Scraper/tests/scrapers/: scraper.py
Currency_Scraper/utilities/: file_writer.py
DangerSwap/: DangerSwap.sln
DangerSwap/DangerSwap.Test/: DangerSwap.Test.csproj
DangerSwap/DangerSwap.UiTest/: DangerSwap.UiTest.csproj  DangerSwapRegistration.cs  packages.config
Scrapers/: pyproject.toml  requirements.txt  setup.cfg
Scrapers/src/: main.py  (+1 more)
(+109 files in other folders)
