[metadata]
name = crypyto_scapers
description = crypto price web scrapers
long_description = file: README.md
author = Povilas Lajus
url = https://github.com/PLajus
license = MIT
license_file = LICENSE
platform = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    
[options]
packages = 
    scrapers
    filters
    parsers
install_requires = 
    requests>=2
    beautifulsoup4>=4
package_dir =
    =src
zip_safe = false
test_suite = tests