[metadata]
name = Currency_Scraper
version = 1.0.0
description = This package contains web currency scraper
url = https://github.com/The-danger-zone/danger-swap
author = Vytenis Rimkus
author_email = vytenis100@gmail.com
license = MIT
platform = any

classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:

install_requires =
    requests>=2
    beautifulsoup4>=4

package_dir =
    =src
zip_safe = false
test_suite = tests
